medicines-api/overlays/prod-new/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicines-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: medicines-api
          image: mhraproducts4853registry.azurecr.io/products/medicines-api
